--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.33.3",
     "keen-slider": "^6.6.4",
     "next": "12.1.0",
     "pure-react-carousel": "^1.28.1",
